# pr2_mechanism

./: .gitignore  .hgignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  stack.xml
pr2_controller_interface/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pr2_controller_interface/include/pr2_controller_interface/: controller.h  controller_provider.h
pr2_controller_manager/: CHANGELOG.rst  CMakeLists.txt  controller_manager.launch  doc.dox  manifest.xml  package.xml  setup.py
pr2_controller_manager/include/pr2_controller_manager/: controller_manager.h  controller_spec.h  pr2_mechanism_diagnostics.h  scheduler.h
pr2_controller_manager/scripts/: controllers_to_diagnostics.py  detect.py  joints_to_diagnostics.py  pr2_controller_manager  pr2_controller_manager_adapter.py  pr2_controller_spawner  spawner  unspawner
pr2_controller_manager/src/: controller_manager.cpp  pr2_mechanism_diagnostics.cpp  scheduler.cpp
pr2_controller_manager/src/pr2_controller_manager/: pr2_controller_manager_interface.py
pr2_controller_manager/test/: controller_config.yaml  controller_config2.yaml  controller_config3.yaml  controller_config4.yaml  controller_config_broken.yaml  controller_config_broken10.yaml  controller_config_broken11.yaml  controller_config_broken2.yaml  controller_config_broken3.yaml  controller_config_broken4.yaml  controller_config_broken5.yaml  controller_config_broken6.yaml  controller_config_broken7.yaml  controller_config_broken8.yaml  controller_config_broken9.yaml  controller_plugin.xml  controller_test.launch  listenerpublisher_ms.py  ms_publisher_test.cpp  robot.cpp  test-mechanism-state-cpp.xml  test-mechanism-state-py.xml  test.cpp  test_ms.py  test_ms_cpp.py
pr2_controller_manager/test/controllers/: test_controller.cpp  test_controller.h
pr2_controller_manager_tests/: CMakeLists.txt  manifest.xml
pr2_controller_manager_tests/src/: dummy_app.cpp
pr2_hardware_interface/: CHANGELOG.rst  CMakeLists.txt  doc.dox  manifest.xml  package.xml
pr2_hardware_interface/include/pr2_hardware_interface/: hardware_interface.h
pr2_mechanism/: CHANGELOG.rst  CMakeLists.txt  package.xml
pr2_mechanism_diagnostics/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pr2_mechanism_diagnostics/include/pr2_mechanism_diagnostics/: controller_diagnostics.h  joint_diagnostics.h  pr2_mechanism_diagnostics.h
pr2_mechanism_diagnostics/src/: controller_diagnostics.cpp  joint_diagnostics.cpp  pr2_mechanism_diagnostics.cpp
pr2_mechanism_diagnostics/test/: mech_diag_test.py  pub_mech_stats.py  trans_error_test.py
pr2_mechanism_diagnostics/test/launch/: mech_diag_test_main.launch  nan_test.launch  overrun_test.launch  trans_error_test.launch  uncal_test.launch  wrist_trans_error.launch
pr2_mechanism_diagnostics/test/urdf/: upperarm.urdf.xacro  wrist.urdf.xacro
pr2_mechanism_model/: CHANGELOG.rst  CMakeLists.txt  doc.dox  manifest.xml  package.xml  pr2.urdf  transmission_plugins.xml
pr2_mechanism_model/include/pr2_mechanism_model/: chain.h  joint.h  joint_calibration_simulator.h  pr2_belt_transmission.h  pr2_gripper_transmission.h  robot.h  simple_offset_transmission.h  simple_transmission.h  transmission.h  tree.h  wrist_transmission.h
pr2_mechanism_model/src/: chain.cpp  joint.cpp  joint_calibration_simulator.cpp  pr2_belt_transmission.cpp  pr2_gripper_transmission.cpp  robot.cpp  simple_offset_transmission.cpp  simple_transmission.cpp  tree.cpp  wrist_transmission.cpp
pr2_mechanism_model/test/: test_chain.cpp  test_joint_calibration_simulator.cpp  test_joint_calibration_simulator.launch  test_wrist_transmission.cpp
pr2_mechanism_msgs/: CMakeLists.txt  manifest.xml
pr2_mechanism_msgs/action/: SwitchController.action
pr2_mechanism_msgs/msg/: ActuatorStatistics.msg  ControllerStatistics.msg
realtime_tools/: manifest.xml
realtime_tools/include/realtime_tools/: realtime_publisher.h
