<package>
  <name>pr2_controller_manager</name>
  <version>1.8.17</version>
  <description>The controller manager (CM) package provides the infrastructure to run controllers in a hard realtime loop.</description>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/pr2_controller_manager</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Eric Berger berger@willowgarage.com</author>
  <author>Stuart Glaser</author>
  <author>Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>pr2_hardware_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>pr2_mechanism_diagnostics</build_depend>
  <build_depend>pr2_description</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>pr2_hardware_interface</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>pr2_mechanism_diagnostics</run_depend>
  <run_depend>pr2_description</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosparam</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <pr2_controller_interface plugin="${prefix}/test/controller_plugin.xml"/>
  </export>
</package>
