<package format="3">
  <name>pr2_controller_manager</name>
  <version>1.8.21</version>
  <description>The controller manager (CM) package provides the infrastructure to run controllers in a hard realtime loop.</description>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/pr2_controller_manager</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Eric Berger berger@willowgarage.com</author>
  <author>Stuart Glaser</author>
  <author>Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>pr2_hardware_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>pr2_mechanism_diagnostics</build_depend>
  <build_depend>pr2_description</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rostest</build_depend>

  <exec_depend>pr2_hardware_interface</exec_depend>
  <exec_depend>pr2_mechanism_model</exec_depend>
  <exec_depend>pr2_mechanism_diagnostics</exec_depend>
  <exec_depend>pr2_description</exec_depend>
  <exec_depend>pr2_controller_interface</exec_depend>
  <exec_depend>pr2_mechanism_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosparam</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <pr2_controller_interface plugin="${prefix}/test/controller_plugin.xml"/>
  </export>
</package>
