<package>
  <name>pr2_mechanism_diagnostics</name>
  <version>1.8.18</version>
  <description>The `pr2_mechanism_diagnostics` node subscribes to `mechanism_statistics` and publishes diagnostics data for joints and controllers on `/diagnostics`.</description>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_mechanism_diagnostics</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Kevin Watts</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
